--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Interactive Wheel 🎡</title>
   <meta name="description" content="Interactive wheel to make fun decisions." />
+  <link rel="icon" href="images/ruleta.ico" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
