Agrega metaetiquetas para Open Graph y Twitter Card

--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Interactive Wheel 🎡</title>
   <meta name="description" content="Interactive wheel to make fun decisions." />
+
+  <!-- Favicon -->
   <link rel="icon" href="images/ruleta.ico" type="image/x-icon" />
+
+  <!-- TailwindCSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Interactive Wheel 🎡" />
+  <meta property="og:description" content="A fun and interactive wheel to help make decisions!" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ruleta-web.netlify.app/" />
+  <meta property="og:image" content="https://ruleta-web.netlify.app/images/preview.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Interactive Wheel 🎡" />
+  <meta name="twitter:description" content="A fun and interactive wheel to help make decisions!" />
+  <meta name="twitter:image" content="https://ruleta-web.netlify.app/images/preview.png" />
 </head>
 
 <body>
